# LePotager

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: pipeline.example.yaml
docs/: hardware.md  recording.md
scripts/: record_tactile_dataset.sh  run_pipeline.py
src/lepotager/: __init__.py  __main__.py  config.py  lerobot_cli.py  palpation.py  paths.py  pipeline.py
src/lepotager/hardware/: __init__.py  so101_tactile_follower.py  velostat_reader.py
tests/: test_velostat_fpb.py
