[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lepotager"
version = "0.1.0"
description = "LePotager — SO-101 tactile fruit sorting with LeRobot ACT"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=2.0.0",
    "pyserial>=3.5",
]

[project.scripts]
lepotager = "lepotager.pipeline:main"

[tool.setuptools]
package-dir = { "lepotager" = "src/lepotager", "hardware" = "src/lepotager/hardware" }
packages = ["lepotager", "hardware"]
